terraform/sg.tf
resource "aws_security_group" "web_server_sg" {
  name   = "devops-public-sg"
  vpc_id = aws_vpc.devops_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = [
      aws_subnet.public_subnet.cidr_block,
      aws_subnet.private_subnet.cidr_block
    ]
  }
  ingress {
    from_port = 9100
    to_port   = 9100
    protocol  = "tcp"
    cidr_blocks = [
      aws_subnet.public_subnet.cidr_block,
      aws_subnet.private_subnet.cidr_block
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "devops-public-sg"
  }
}

resource "aws_security_group" "private_sg" {
  name   = "devops-private-sg"
  vpc_id = aws_vpc.devops_vpc.id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = [
      aws_subnet.public_subnet.cidr_block,
      aws_subnet.private_subnet.cidr_block
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "devops-private-sg"
  }
}
